--- a/41_hello_fx/src/sample/sample.fxml
+++ b/41_hello_fx/src/sample/sample.fxml
@@ -1,14 +1,16 @@
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.GridPane?>
-
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.ColumnConstraints?>
 <GridPane fx:controller="sample.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
-    <Label text="Welcome to JavaFX" textFill="green">
-        <font>
-            <Font name="Ubuntu Monospace" size="50" />
-        </font>
-    </Label>
+          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10" gridLinesVisible="true">
+    <columnConstraints>
+        <ColumnConstraints percentWidth="50.0"/>
+        <ColumnConstraints percentWidth="50.0"/>
+    </columnConstraints>
+    <Button text="Button number one" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
+    <Button text="Button number two" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
+    <Button text="Button number three" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
+    <Button text="Big long button number four more text more text more text more text more text more text more text"
+            GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+    <Button text="Button number five" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
 </GridPane>
